# xilem_extras

./: Cargo.toml  README.md  justfile
examples/gallery/: Cargo.toml
examples/gallery/src/: app_menu_demo.rs  app_model.rs  calendar_demo.rs  calendar_grid.rs  chart_demo.rs  list_demo.rs  main.rs  menu_demo.rs  mock_data.rs  progress_demo.rs  sectioned_list_demo.rs  stock_chart_demo.rs  table_demo.rs  tabs_demo.rs  tree_demo.rs  tree_view_demo.rs  virtual_table_demo.rs  widgets_demo.rs
src/: lib.rs  locale.rs
src/app_menu/: action_trait.rs  builder.rs  mod.rs  render.rs  shortcut.rs  view.rs
src/app_menu/native/: fallback.rs  mod.rs  muda_backend.rs
src/calendar_picker/: mod.rs  view.rs  widget.rs
src/chart/: mod.rs  view.rs  widget.rs
src/components/: click_interceptor.rs  clipped.rs  disclosure.rs  group_box.rs  icon.rs  mod.rs  param_selector.rs  radio_widget.rs  row_button.rs  rust_logos.rs  styled_checkbox.rs  styled_text_input.rs  svg_icon.rs  switch_widget.rs
src/context_menu/: dropdown.rs  mod.rs  view.rs  widget.rs
src/dropdown_select/: dropdown.rs  mod.rs  option_item.rs  view.rs  widget.rs
src/form/: mod.rs  view.rs
src/list/: disclosure_group.rs  list_view.rs  list_widget_view.rs  mod.rs  section.rs  widget.rs
src/menu_button/: dropdown.rs  menu_item.rs  mod.rs  separator.rs  submenu_item.rs  view.rs  widget.rs
src/menu_items/: entry.rs  group.rs  item.rs  mod.rs  separator.rs  sequence.rs  submenu.rs
src/progress/: busy_hex_view.rs  busy_hex_widget.rs  mod.rs  round_view.rs  round_widget.rs  view.rs  widget.rs
src/selection/: mod.rs  multi.rs  single.rs
src/sheet/: layer.rs  mod.rs  view.rs  widget.rs
src/stock_chart/: mod.rs  view.rs  widget.rs
src/table/: column.rs  column_widths.rs  legacy_table.rs  mod.rs  resizable_header.rs  sort_state.rs  state.rs  table_cell.rs  table_view.rs  widget.rs
src/tabs/: mod.rs  nav_tab_bar.rs  tab_bar.rs  tab_item.rs
src/theme/: color_scheme.rs  mod.rs  tokens.rs
src/time_picker/: mod.rs  view.rs  widget.rs
src/traits/: identifiable.rs  list_item.rs  mod.rs  selectable.rs  table_row.rs  tree_node.rs
src/tree/: disclosure_row.rs  expansion_state.rs  flatten.rs  keyboard_focus.rs  mod.rs  scroll_focus.rs  tree_view.rs  tree_view_builder.rs  types.rs
src/virtual_list/: mod.rs  view.rs  widget.rs
